Implementation version 1.0.1 - Fix defect 985 Property containing license text in ExtractedLicensingInfo - Significant changes to the way the standard licenses are handled. The model will now reference the full standard license. - Changed data license to CC0-1.0

--- a/changelog
+++ b/changelog
@@ -1,11 +1,15 @@
+Implementation version 1.0.1
+- Fix defect 985 Property containing license text in ExtractedLicensingInfo
+- Significant changes to the way the standard licenses are handled.  The model will now reference the full standard license.
+- Changed data license to CC0-1.0
+
 Implementation version 0.9.6
-- Added 
 - Added first pass at HTML viewer
 - Added verification code excluded files to SPDXViewer
 - Fixed error message in verification 
 - Fixed spelling error in License table of contents
 
-Added SPDX tag package contributed by Rana Rahal from Protocode.  Contains 2 utilities:
+Added SPDX tag package contributed by Rana Rahal from Protecode.  Contains 2 utilities:
   - RdfToTag - converts RDF file to a tag file
   - SpreadsheetToTag - converts the spreadsheet to a tag file
 Replaced the SpdxViewer code with Rana's implementation 
