--- a/resources/stdlicenses/AFL-1.1
+++ b/resources/stdlicenses/AFL-1.1
@@ -91,7 +91,7 @@
 <h2 id="licenseText">Text</h2>
 
 <div property="spdx:licenseText" class="license-text">
-Academic Free License<br/>
+﻿Academic Free License<br/>
    Version 1.1<br/>
 <br/>
 The Academic Free License applies to any original work of authorship<br/>
