--- a/resources/stdlicenses/APSL-1.2
+++ b/resources/stdlicenses/APSL-1.2
@@ -185,7 +185,7 @@ Apple Public Source License Ver. 1.2<br/>
 <br/>
 13.7 Entire Agreement; Governing Law. This License constitutes the entire agreement between the parties with respect to the subject matter hereof. This License shall be governed by the laws of the United States and the State of California, except that body of California law concerning conflicts of law.<br/>
 <br/>
-Where You are located in the province of Quebec, Canada, the following clause applies: The parties hereby confirm that they have requested that this License and all related documents be drafted in English. Les parties ont exig&#233; que le pr&#233;sent contrat et tous les documents connexes soient r&#233;dig&#233;s en anglais.<br/>
+Where You are located in the province of Quebec, Canada, the following clause applies: The parties hereby confirm that they have requested that this License and all related documents be drafted in English. Les parties ont exigé que le présent contrat et tous les documents connexes soient rédigés en anglais.<br/>
 <br/>
 EXHIBIT A.<br/>
 <br/>
