--- a/resources/stdlicenses/CECILL-1.1
+++ b/resources/stdlicenses/CECILL-1.1
@@ -110,9 +110,9 @@ principles guiding its drafting:<br/>
 The following bodies are the authors of this license CeCILL (Ce : CEA, C :<br/>
 CNRS, I : INRIA, LL : Logiciel Libre):<br/>
 <br/>
-Commissariat &#224; l&apos;Energie Atomique - CEA, a public scientific, technical  and<br/>
+Commissariat à l&apos;Energie Atomique - CEA, a public scientific, technical  and<br/>
 industrial establishment, having its principal place of  business  at  31-33<br/>
-rue de la F&#233;d&#233;ration, 75752 PARIS cedex 15, France.<br/>
+rue de la Fédération, 75752 PARIS cedex 15, France.<br/>
 <br/>
 Centre National de la Recherche Scientifique -  CNRS,  a  public  scientific<br/>
 and technological establishment, having its principal place of  business  at<br/>
@@ -401,7 +401,7 @@ the agreement that shall govern its distribution.<br/>
 <br/>
 6.4.2. The Licensee undertakes not to directly or  indirectly  infringe  the<br/>
 intellectual property rights of the Holder and/or Contributors and to  take,<br/>
-where applicable, vis-&#224;-vis its staff,  any  or  all  measures  required  to<br/>
+where applicable, vis-à-vis its staff,  any  or  all  measures  required  to<br/>
 ensure respect for said intellectual property rights of  the  Holder  and/or<br/>
 Contributors.<br/>
 <br/>
