--- a/resources/stdlicenses/OFL-1.1
+++ b/resources/stdlicenses/OFL-1.1
@@ -125,7 +125,7 @@ copyright statement(s).<br/>
 distributed by the Copyright Holder(s).<br/>
 <br/>
 &quot;Modified Version&quot; refers to any derivative made by adding to, deleting,<br/>
-or substituting &#8212; in part or in whole &#8212; any of the components of the<br/>
+or substituting — in part or in whole — any of the components of the<br/>
 Original Version, by changing formats or by porting the Font Software to a<br/>
 new environment.<br/>
 <br/>
