--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+Implementation version 1.1.2
+- Improved error handling in SPDX parser - fixed bug 1074
 Implementation version 1.1.1
 - Replaced StandardLicense.get/setNotes with get/set Comment to match spec.  Deprecated the old methods.
 Implementation version 1.1.0
