--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+Implementation version 1.1.3
+- Fix bug 1085 Change how the document URI is generated to allow for non-URI download locations
+- Partially fix bug 1084 by reducing memory requirements
 Implementation version 1.1.2
 - Improved error handling in SPDX parser - fixed bug 1074
 Implementation version 1.1.1
