--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+Implementation version 1.1.5
+- Fix bug 1094 translator tools accept "PackageVerifcationCode" instead of "PackageVerificationCode"
+Implementation version 1.1.4
+- Add checks for DOAP Project URI == Unknown (possible bug in adding DOAP projects to existing files)
 Implementation version 1.1.3
 - Fix bug 1085 Change how the document URI is generated to allow for non-URI download locations
 - Partially fix bug 1084 by reducing memory requirements
