--- a/TODO
+++ b/TODO
@@ -1,4 +1,12 @@
 - check TestFiles/spdx_licenselist_v1.19.xls difference to released version
+- cleanup warnings
+- windows or Unix line endings?
+- use a spdx-licenselist artifact
+- use a spdx-testdata artifact?
+  - define reference test data (e.g. u-boot-2013.10.tar.bz2)
 - cleanup licensing
 - provide webservice
-- provide a spdx file
+- provide a perfect spdx file
+
+have fun!
+;-r
