Add additional methods for using non-standard license ID's

--- a/changelog
+++ b/changelog
@@ -1,6 +1,9 @@
 Implementation version 1.2.1
 - Fixed null pointer exception when unable to connect to the SPDX standard license list website
 - changed property name for standard license template to match spec (from licenseTemplate to standardLicenseTemplate)
+- added license list version to standard license pages
+- Fixed bug 1166 verification for licenseID string
+- Added methods to SPDXDocument to create non-standard licenses with non-generated license ID's
 Implementation version 1.2.0
 - Added support for spec version 1.2
   - Added fileDependency property to SPDXFile (RDF, tag, Spreadsheet, comparer)
