--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+Implementation version 1.2.2
+- Fixed some possible resource leaks in the SPDX tools
+- Added an optional parameter to tagToRDF to specify the RDF output style (e.g. Turtle)
 Improved SPDX Tools structure (contributed by Roger Meier)
 - moved tools to org.spdx.tools namespace
 - common main class
