--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+Implementation version 1.2.3
+- Fixed bug where setFiles(SPDXFile[] files) did not remove the old referencedFiles
+- Fix minor bug where duplicate checksums may be created
 Implementation version 1.2.2
 - Fixed some possible resource leaks in the SPDX tools
 - Added an optional parameter to tagToRDF to specify the RDF output style (e.g. Turtle)
