--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+Implementation version 1.2.4
+- Fix bug where standard licenses were using owl:sameAs for cross reference URL's.  Changed to rdfs:seeAlso
+- Fix bug relating to SPDXFile.getArtifactOf()
 Implementation version 1.2.3
 - Fixed bug where setFiles(SPDXFile[] files) did not remove the old referencedFiles
 - Fix minor bug where duplicate checksums may be created
