Fix TagToSpreadsheet parser (but 1216), set base namespace Signed-off-by: goneall <gary@sourceauditor.com>

--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+Implementation version 1.2.8
+- No longer require excluded file names in package sheet for spreadsheet
+- Fix bug 1216  TagToSpreadsheet parser fails
+- Set the base to the namespace for the SPDX document itself
 Implementation version 1.2.7
 - Support absolute URI references for SPDXFile and SPDXPackage
 - Fix bug 1201 - Error opening an SPDX document with a non-numeric SPDX license ID
