--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+Implementation version 1.2.10
+
 Implementation version 1.2.9
 - Add merge utility contributed by Gang Ling
 Implementation version 1.2.8
