--- a/changelog
+++ b/changelog
@@ -1,4 +1,5 @@
 Implementation version 2.0.1
+- Fix bug 1290 SPDXTools does not accept WITH operator in tag file
 - Updated Mustache version to be compatible with more recent versions per github pull request 11 from Yevster
 Fix bug 1278 - SPDXTools help lists PrettyPrint option that does not exist
 Updated RDFaLicenseGenerator to add support for JSON output (no version increment)
