--- a/changelog
+++ b/changelog
@@ -1,5 +1,11 @@
 Implementation version 2.0.4
-
+- Fix bug 1317 - bad links on license page
+- Updated license list cache to version 2.1
+- Fixed Bug-1319: Proper conversion of line breaks to <br /> in generated HTML. Template handling for potentially multiline fields.
+- Fixed bug 1318: Fixing template error resulting in duplicate and unfriendly display of creator info. 
+- Added support for optional and variable text templates to license headers
+- Fix formatting for the license header text in the LicenseRdfaGenerator
+- Fixing error where downloadLocation parameter to consturctor gets ignored. Contributed under Apache 2.0 License
 Implementation version 2.0.3
 - Add default license list version if no license list version is supplied
 - Fixed bug 1309 - correctly form license list version
