--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+Implementation version 2.0.5
 Implementation version 2.0.4
 - Fixed bug where the RdfToHTML could not open template files from the local resources directory
 - Fixed bug where license expressions were case sensitive
