--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+Implementation version 2.1.3
+- Fix parser to remove non breaking spaces (0x00A0)
 Implementation version 2.1.2
 - Fix NPE in parser
 - Fix bug - Check for max. cell size in compare utility
